updated styling. there's a bug with the images not showing up locally now, though they do seem to load properly on gh pages, so I'm in part pushing this code to see what happens to the images

--- a/src/components/Gallery/style.css
+++ b/src/components/Gallery/style.css
@@ -1,17 +1,28 @@
 .images-wrapper {
-    background-color: black;
-    width: 100%;
+    /* background-color: black; */
+    /* max-width: 100vw; */
 }
 
 .individual-wrapper {
-    width: 100%;
-    background-color: pink;
+    /* max-width: 100vw; */
+    /* background-color: pink; */
     margin: 1rem;
     display: flex;
+    /* overflow-x: hidden !important; */
 }
 
 .image {
     max-height: 300px;
+    /* max-width: 100vw; */
     margin: 1.5rem;
-    overflow: hidden;
+    border: 3px solid white;
+    border-radius: 15px;
+    /* overflow-x: hidden !important; */
+}
+
+@media screen and (max-width: 600 px) {
+    .image {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
